force-app/main/default/objects/Homeys_Auth_Config__mdt/Homeys_Auth_Config__mdt.object-meta.xml
<CustomObject>
    <label>Homeys_Auth_Config</label>
    <pluralLabel>Homeys_Auth_Config</pluralLabel>
</CustomObject>