force-app/main/default/objects/Homeys_Auth_Config__mdt/fields/password__c.field-meta.xml
<CustomField>
    <fullName>password__c</fullName>
    <label>password</label>
    <length>156</length>
    <type>Text</type>
</CustomField>