force-app/main/default/objects/Homeys_Auth_Config__mdt/fields/URL_token__c.field-meta.xml
<CustomField>
    <fullName>URL_token__c</fullName>
    <label>URL_token</label>
    <type>Url</type>
</CustomField>