force-app/main/default/objects/Homeys_Auth_Config__mdt/fields/username__c.field-meta.xml
<CustomField>
    <fullName>username__c</fullName>
    <label>username</label>
    <type>Email</type>
</CustomField>