force-app/main/default/objects/Homeys_Auth_Config__mdt/fields/x_api_key__c.field-meta.xml
<CustomField>
    <fullName>x_api_key__c</fullName>
    <label>x-api-key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>